<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalleContacto">

    <TextView
        android:id="@+id/tvTituloConfirma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_titulo_confirmacion"
        android:textSize="@dimen/titulo_confirma" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/datos_muestra"
        android:layout_marginTop="@dimen/margin_top_tvNombre"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_fechanac"
            android:textSize="@dimen/datos_muestra" />

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/datos_muestra"
            android:layout_marginStart="@dimen/datos_padding_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_telefono"
            android:textSize="@dimen/datos_muestra"/>
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/datos_muestra"
            android:layout_marginStart="@dimen/datos_padding_left"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_email"
            android:textSize="@dimen/datos_muestra"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/datos_muestra"
            android:layout_marginStart="@dimen/datos_padding_left"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_descripcion"
            android:textSize="@dimen/datos_muestra"/>

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/datos_muestra"
            android:layout_marginStart="@dimen/datos_padding_left"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/btn_text_editar"
        android:layout_gravity="center"/>


</LinearLayout>