<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNomnbre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholde_nombre" />

    </com.google.android.material.textfield.TextInputLayout>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_below="@id/tilNombre"
        android:id="@+id/dpFechaNac"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dpFechaNac">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_telefono"
            android:textColorLink="#420B0B" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilTelefono">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_email" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_descripcion" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_text_siguiente" />


</RelativeLayout>